kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/nat/pos.k
use super.*;

pub type Pos {
    one: Pos,
    extend(left: Pos, right: Bit): Pos,
}
