kanc/src/tests/sample_code/should_fail/single_file/parse/check/question_checkee.k
type Unit {
    .u: Unit,
}

let foo = check (?: Unit) {
    Unit.u
};
